feat: redis를 활용한 동시성(lettuce / redisson)

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation group: 'org.redisson', name: 'redisson-spring-boot-starter', version: '3.43.0'
 }
 
 tasks.named('test') {
